--- a/404.md
+++ b/404.md
@@ -1,25 +1,19 @@
 ---
 layout: default
+permalink: /404.html
 ---
 
-<style media="screen">
-  h2 {
-    margin-bottom: 0;
-  }
-
-  /* Override default wrapper to center error message */
-  .wrapper {
-    text-align: center;
-  }
-</style>
-
-# 404
-
-##  Not Found
+# 404 - Not Found
+{: style="text-align: center;"}
 
 # ¯\\_(ツ)\_/¯
+{: style="text-align: center;"}
 
 ###  What happened?
+{: style="text-align: center;"}
+
 `The file or page that you're looking for could not be found.`
+{: style="text-align: center;"}
 
 _Did you spell the link correctly?_
+{: style="text-align: center;"}
